--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+  "buildCommand": "npm run build:vercel",
+  "outputDirectory": "dist",
+  "framework": "vite",
+  "installCommand": "npm install",
   "rewrites": [
     {
       "source": "/(.*)",
